CHANGELOG

2.0.23
UTILS:

BUGFIX:

GENERAL:


2.0.22 (20211112)
UTILS:
* pa_rule-edit - get back actions=user-add:USER / user-remove:USER / user-set-any for PAN-OS API mode
* pa_rule-edit | introduce actions=user-check-ldap:show,LDAPuser,LDAPserver,OU=XYZ;DC=domain;DC=local,OUfilter
* pa_rule-edit | actions=user-check-ldap - extend to check if user is existent in a specific LDAP group e.g. disabled
* pa_rule-edit | actions=user-check-ldap - extend help
* pa_rule-edit - enhancement for actions=from-/to-calculate-zones - if template is set to api@SERIAL - now full routing table incl. dynamic routing is used for zone calculation
* class UTIL - extend method locationNotFound for JSON response

BUGFIX:
* pa_upload-config in=api://MGMT-IP/merged-config - bringing this feature back to specify to download running-/merged-/candidate-config
* framework class ObjStore - bugfix - extend validation about existing variable setting
* framework class RuleStore | bugfix for Fawkes Container / DeviceCloud
* framework class PanAPIConnector - bugfix if PAN-OS API mode and API key is not available in combination with argument shadow-json
* pa_rule-stats | bugfix to display all object if argument loadpanoramapushedconfig is used

GENERAL:
* class Rule/VirtualRouter/StaticRoute - optimise method zoneCalculation to use optimised create-/add-static-Route


2.0.21 (20211106)
UTILS:
* pa_securityprofile-edit | extend class with threatException - display it with actions=display
* pa_securityProfil-edit | introduce 'filter=( exception is.set) / (exception has XYZ)'
* pa_securityprofil-edit | introduce actions=exporttoexcel:FILE.html
* pa_securityprofil-edit - improve JSON response stdout with argument shadow-json
* pa_application-edit | introduce 'filter=(name regex /XYZ/)'
* pa_rule-edit | introduce 'filter=(app has.recursive XYZ)'

BUGFIX:
* pa_securityprofile-edit | bugfix based on filter=(location is XYZ)