@@ -2,6 +2,7 @@ CHANGELOG
 
 2.0.23
 UTILS:
+* pa_rule-merger - extend argument additionalmatch with 'secprof'
 
 BUGFIX:
 
